fix: base url 설정